--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,7 +8,7 @@ Fixed:
 
 v0.2.0 (2024-09-25)
 -----------------
-Added: 
+Added:
  - Setting to hide valve sensors
  - Hide sample sensor when it is disconnected
  - Sentry shuts device down if in experiment mode and:
@@ -18,6 +18,7 @@ Added:
  - Log files store coefficients, so they can be correctly viewed on other machines
  - Warning and Error history
  - Python 3.12+ support
+ - Distribution as pip package
 
 Changed:
  - Shutdown button is now momentary contact
