--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -18,7 +18,10 @@ Added:
  - Log files store coefficients, so they can be correctly viewed on other machines
  - Warning and Error history
  - Python 3.12+ support
- - Distribution as pip package
+ - Distribution as pip package:
+   - Added pyproject.toml for package configuration
+   - Created PyPI release for easy installation
+   - Updated installation instructions in README.md
 
 Changed:
  - Shutdown button is now momentary contact
